tests/machine/x/ocaml/group_by_conditional_sum.error
File "/tmp/TestOCamlCompiler_VMValid_Goldengroup_by_conditional_sum2735266557/001/group_by_conditional_sum.ml", line 23, characters 47-50:
23 | type record1 = { mutable cat : string; mutable val : int; mutable flag : bool }
                                                    ^^^
Error: Syntax error
